--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ async></script>
             poster="img/nailjail.jpg" display-mode="inline" loop>
         <source src="playlist.m3u8" type="application/x-mpegurl" />
         <dl8-recommendation mode="static">
-            <dl8-external-content 
+            <dl8-external-content
+                label=""
                 poster="img/handsfree.jpg"
                 url="https://vrsumo.com/vrmode/"
                 autostart
