--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ async></script>
 </head>
 
 <body>
-    <dl8-video title="Nailed in Jail" author="BaDoinkVR" format="STEREO_180_LR" poster="img/nailjail.jpg" display-mode="inline" loop>
+    <dl8-video title="Nailed in Jail" format="STEREO_180_LR" poster="img/nailjail.jpg" display-mode="inline">
         <source src="playlist.m3u8" type="application/x-mpegurl" />
         <dl8-recommendation mode="static">
             <dl8-external-content poster="img/handsfree.jpg" url="https://vrsumo.com/vrmode/" autostart>
