--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ async></script>
 <body>
     <dl8-video title="Nailed in Jail" format="STEREO_180_LR" poster="img/nailjail.jpg" display-mode="inline">
         <source src="playlist.m3u8" type="application/x-mpegurl" />
-        <dl8-recommendation mode="static">
+        <!--<dl8-recommendation mode="static">
             <dl8-external-content poster="img/handsfree.jpg" url="https://vrsumo.com/vrmode/" autostart>
             </dl8-external-content>
-        </dl8-recommendation>
+        </dl8-recommendation> -->
     </dl8-video>
 </body>
