--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<head>
+    <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
+</head>
 <body>
-    <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js"></script>
     <dl8-video title="Nailed in Jail" format="STEREO_180_LR" poster="img/nailjail.jpg" display-mode="inline">
         <dl8-recommendation mode="static">
             <dl8-external-content poster="img/handsfree.jpg" url="https://vrsumo.com/vrmode/" autostart></dl8-external-content>
+            <dl8-video title="Nailed in Jail" format="STEREO_180_LR" poster="img/nailjail.jpg" display-mode="inline">
+                <source src="playlist.m3u8" type="application/x-mpegurl" />
+            </dl8-video>
         </dl8-recommendation>
         <source src="playlist.m3u8" type="application/x-mpegurl" />
     </dl8-video>
