--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <dl8-video title="Head of Class" format="STEREO_180_LR" poster="img/headclass.jpg" display-mode="inline">
         <source src="DASH/manifest.mpd" type="application/dash+xml" />
         <source src="HLS/playlist.m3u8" type="application/x-mpegurl" />
-        <dl8-recommendation mode="static">
+        <!-- <dl8-recommendation mode="static">
             <dl8-external-content poster="img/handsfree.jpg" url="https://vrsumo.com/vrmode/" autostart></dl8-external-content>
-        </dl8-recommendation>
+        </dl8-recommendation> -->
     </dl8-video>
 </body>
