--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <source src="HLS/playlist.m3u8" type="application/x-mpegurl" />
         <source src="DASH/manifest.mpd" type="application/dash+xml" />
         <dl8-recommendation mode="static">
-           <dl8-external-content title="" poster="img/handsfree.jpg" url="https://vrsumo.com/vrmode/" autostart></dl8-external-content>
-           <dl8-video title="Head of Class" format="STEREO_180_LR" poster="img/headclass.jpg" display-mode="inline">
+           <dl8-video title="Video Recommendation" format="STEREO_180_LR" poster="img/headclass.jpg" display-mode="inline">
                 <source src="HLS/playlist.m3u8" type="application/x-mpegurl" />
                 <source src="DASH/manifest.mpd" type="application/dash+xml" />
            </dl8-video>
+           <dl8-external-content title="" poster="img/handsfree.jpg" url="https://vrsumo.com/vrmode/" autostart></dl8-external-content>
         </dl8-recommendation>
     </dl8-video>
 </body>
