--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <head>
     <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
+    <style>
+        h2{
+            font-family: "sans-serif";
+        }
+    </style>
 </head>
 <body>
+    <h2>Adaptive Streaming with Mpeg-Dash/HLS using Zencoder</h2>
     <dl8-video title="Head of Class" format="STEREO_180_LR" poster="img/headclass.jpg" display-mode="inline" preload="auto">
         <source src="HLS/playlist.m3u8" type="application/x-mpegurl" />
         <source src="DASH/manifest.mpd" type="application/dash+xml" />
