--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <head>
     <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
-    <style>
-        h2{
-            font-family: "sans-serif";
-        }
-    </style>
+    <style>h2{font-family: "sans-serif";}</style>
 </head>
 <body>
     <h2>Adaptive Streaming with Mpeg-Dash/HLS using Zencoder</h2>
