--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <h2>Adaptive Streaming with Mpeg-Dash/HLS using Zencoder</h2>
     <h3>Current stream is an HLS single-quality stream to be compared against the one below it</h3>
     <dl8-video title="Head of Class" format="STEREO_180_LR" poster="img/headclass.jpg" display-mode="inline" preload="auto">
-        <source src="HLS/playlist.m3u8" type="application/x-mpegurl" />
-        <source src="DASH/manifest.mpd" type="application/dash+xml" />
+        <source src="HLS-zencoder/playlist.m3u8" type="application/x-mpegurl" />
+       <!-- <source src="DASH/manifest.mpd" type="application/dash+xml" /> -->
         <dl8-recommendation mode="static">
            <dl8-video title="Video Recommendation" format="STEREO_180_LR" poster="img/headclass.jpg" display-mode="inline">
                 <source src="HLS-zencoder/playlist.m3u8" type="application/x-mpegurl" />
