--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <style>h2{font-family:"sans-serif";} h3{font-family:"sans-serif";color:dimgray;}</style>
 </head>
 <body>
-    <div style="display:inline;margin:auto;text-align:center">
-        <dl8-img width="400px" max-width="80%" height="100%" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
+    <div style="display:block;width:auto;text-align:center">
+        <dl8-img max-width="80%" height="600px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
     </div>
 <!--<h2>Adaptive Streaming with Mpeg-Dash/HLS using Zencoder</h2>
     <h3>Current stream is an HLS single-quality stream to be compared against the one below it</h3>
