--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div style="display:block;width:auto;text-align:center">
-        <dl8-img max-width="50%" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
+        <dl8-img max-width="50%" autostart="true" autoplay="true" dl8-autostart-player="true" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
     </div>
 <!--<h2>Adaptive Streaming with Mpeg-Dash/HLS using Zencoder</h2>
     <h3>Current stream is an HLS single-quality stream to be compared against the one below it</h3>
