--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <div style="display:block;width:auto;text-align:center">
         <a href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
-            <dl8-img max-width="50%" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
+            <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
         </a>
     </div>
 <!--<h2>Adaptive Streaming with Mpeg-Dash/HLS using Zencoder</h2>
