--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <style>h2{font-family:"sans-serif";} h3{font-family:"sans-serif";color:dimgray;}</style>
 </head>
 <body>
-    <div style="display:block;width:auto;text-align:center">
-        <a style="width:300px;height:250px" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
-            <dl8-img style="cursor:pointer;" width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
+    <div style="display:inline-block;margin:auto;text-align:center">
+        <a href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
+            <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
         </a>
     </div>
 </body>
