--- a/index.html
+++ b/index.html
@@ -2,8 +2,28 @@
     <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
     <style>h2{font-family:"sans-serif";} h3{font-family:"sans-serif";color:dimgray;}</style>
 </head>
+<style>
+    .container{
+        display:inline-block;
+        margin:auto;
+        text-align:center;
+        width:300;
+        height:250;
+    }
+    .container:after{
+        content: "";
+        background: #000;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index:1;
+        cursor:pointer;
+    }
+</style>
 <body>
-    <div style="display:inline-block;margin:auto;text-align:center">
+    <div class="container">
         <a href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
             <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
         </a>
