--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         width:300;
         height:250;
     }
-    .container:after{
+    .link:after{
         content: "";
         background: #000;
         position: absolute;
@@ -24,7 +24,7 @@
 </style>
 <body>
     <div class="container">
-        <a href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
+        <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
             <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
         </a>
     </div>
