--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         width:300;
         height:250;
     }
-    .link:after{
+    .container:after{
         content: "";
-        background: #000;
+        background: rgba(0,0,0,0);
         position: absolute;
         top: 0;
         left: 0;
-        height: 100%;
-        width: 100%;
+        height: 250;
+        width: 300;
         z-index:1;
         cursor:pointer;
     }
