--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <body>
     <div class="container">
         <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
+            <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
+        </a>
+    </div>
+    <div class="container">
+        <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
             <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
         </a>
     </div>
