2 player bug confirmation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
     <style>h2{font-family:"sans-serif";} h3{font-family:"sans-serif";color:dimgray;}</style>
+    
 </head>
 <style>
     .container{
@@ -28,9 +29,9 @@
             <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
         </a>
     </div>
-    <div class="container">
+    <!--<div class="container">
         <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
             <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
         </a>
-    </div>
+    </div> -->
 </body>
