--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <head>
     <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
     <style>h2{font-family:"sans-serif";} h3{font-family:"sans-serif";color:dimgray;}</style>
-    
+    <meta name="dl8-customization-no-brand-logo" >
+    <meta name="dl8-customization-no-content-badge" >
+    <meta name="dl8-customization-no-brand-watermark-logo" >
+    <meta name="dl8-customization-no-compass" >
 </head>
 <style>
     .container{
