--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <head>
         <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>h2{font-family:"sans-serif";} h3{font-family:"sans-serif";color:dimgray;}</style>
         <meta name="dl8-customization-no-brand-logo" >
         <meta name="dl8-customization-no-content-badge" >
         <meta name="dl8-customization-no-brand-watermark-logo" >
@@ -37,14 +36,9 @@
     </style>
     <body>
         <div class="container">
-            <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
+            <a href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html" target="_blank" rel="nofollow">
                 <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
             </a>
         </div>
-        <!--<div class="container">
-            <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html">
-                <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
-            </a>
-        </div> -->
     </body>
 </html>
