--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             width:300;
             height:250;
         }
-        .container:after{
+        .link:after{
             content: "";
             background: rgba(0,0,0,0);
             position: absolute;
@@ -36,7 +36,7 @@
     </style>
     <body>
         <div class="container">
-            <a href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html" target="_blank" rel="nofollow">
+            <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html" target="_blank" rel="nofollow">
                 <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
             </a>
         </div>
