--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="dl8-customization-no-content-badge" >
         <meta name="dl8-customization-no-brand-watermark-logo" >
         <meta name="dl8-customization-no-compass" >
+        <meta name="dl8-customization-no-exit-button"/>
     </head>
     <style>
         .container{
