--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
     <head>
         <script src="//cdn.delight-vr.com/latest/dl8-985ba993049396783299dc59ef60d6a455dd7529.js" async></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="dl8-customization-no-brand-logo" >
-        <meta name="dl8-customization-no-content-badge" >
-        <meta name="dl8-customization-no-brand-watermark-logo" >
-        <meta name="dl8-customization-no-compass" >
-        <meta name="dl8-customization-no-exit-button"/>
+        <meta name="dl8-customization-no-controls">
+        <meta name="dl8-customization-no-vr-button">
+        <meta name="dl8-customization-no-fullscreen-button">
+        <meta name="dl8-customization-no-settings-button">
+        <meta name="dl8-customization-no-exit-button">
+        <meta name="dl8-customization-no-title">
+        <meta name="dl8-customization-no-brand-watermark-logo">
+        <meta name="dl8-customization-no-compass">
+        <meta name="dl8-beta-immediate-load">
     </head>
     <style>
         .container{
