--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@
         dl8-img{
             margin:0px;
         }
+        dl8-video{
+            margin:0px;
+        }
     </style>
     <body>
         <div class="container">
             <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html" target="_blank" rel="nofollow">
-                <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>
+                <!-- static picture ad -->
+                <!--<dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" ></dl8-img>-->
+                <dl8-video width="300px" height="250px" format="STEREO_180_LR" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROSL" muted loop>
+                    <source src="vid/quality-1-1280.mp4" type="video/mp4" />
+                </dl8-video>
             </a>
         </div>
     </body>
