--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="dl8-customization-no-title">
         <meta name="dl8-customization-no-brand-watermark-logo">
         <meta name="dl8-customization-no-compass">
-        <meta name="dl8-beta-immediate-load">
+        <!--<meta name="dl8-beta-immediate-load">-->
     </head>
     <style>
         .container{
