start with js fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <meta name="dl8-beta-immediate-load">
         <script>
             var element = document.querySelector("dl8-video");
-            element.start();    
+            function(element){
+                element.start();  
+            }
         </script>
     </head>
     <style>
