--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="dl8-beta-immediate-load">
         <script>
             window.onload = function(){
-                var element = document.querySelector("dl8-video");
+                var element = document.querySelector("dl8-img");
                 element.start();
             };
         </script>
