--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
         }
     </style>
     <body>
-        <div class="container">
+        <div class="container">            
             <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html" target="_blank" rel="nofollow">
                 <!-- static picture ad -->
-                <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/demoimg.png" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" start-lat="45"></dl8-img>
+                <img src = "img/300x100-overlay-bdvr.png" />
+                <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/bdvr_screenshot.jpg" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" start-lat="45"></dl8-img>
                 <!--<dl8-video width="300px" height="250px" format="STEREO_180_LR" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROSL" start-lat="45" muted loop>
                     <source src="vid/quality-1-1280.mp4" type="video/mp4" />
                 </dl8-video> -->
