--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         }
         .overlay{
             position:relative;
+            display: inline;
             top:0;
             left:0;
             height:250;
