--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             cursor:pointer;
         }
         .overlay{
-            position:relative;
-            display: inline;
+            position:absolute;
             top:0;
             left:0;
             height:250;
