--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             overflow:hidden;
         }
         dl8-img{
+            position:absolute;
+            top:0;
+            left:0;
             margin:0px;
         }
         dl8-video{
