--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         }
         .overlay{
             position:absolute;
+            cursor: pointer;
             z-index:1;
             top:0;
             left:0;
@@ -62,12 +63,8 @@
     <body>
         <div class="container">            
             <a class="link" href="https://vrsumo.com/vr-video/wow-a-xxx-parody-arteya-needs-your-cum-for-her-mythical-healing-potion-4557.html" target="_blank" rel="nofollow">
-                <!-- static picture ad -->
                 <img class="overlay" src = "img/300x100-overlay-bdvr.png" />
                 <dl8-img width="300px" height="250px" format="STEREO_180_LR" src="img/bdvr_screenshot.jpg" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROLS" start-lat="45"></dl8-img>
-                <!--<dl8-video width="300px" height="250px" format="STEREO_180_LR" display-mode="force-inline" preferred-controls="MAGIC_WINDOW_CONTROSL" start-lat="45" muted loop>
-                    <source src="vid/quality-1-1280.mp4" type="video/mp4" />
-                </dl8-video> -->
             </a>
         </div>
     </body>
