--- a/hlsDemo/index.html
+++ b/hlsDemo/index.html
@@ -39,6 +39,7 @@ async></script>
 <style>
     body{
         background: #222;
+        color: #ddd;
     }
     dl8-video{
         max-width: 500px;
