--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </script>
     </head>
     <body>
-        <dl8-video format="STEREO_180_LR" display-mode="inline" style="width:100%" preferred-controls="MAGIC_WINDOW_CONTROLS">
+        <dl8-video format="STEREO_180_LR" display-mode="inline" style="width:100%; height:100%" preferred-controls="MAGIC_WINDOW_CONTROLS" loop>
             <source src="vid/test_clip_1280.mp4" type="video/mp4" />
         </dl8-video>
     </body>
