--- a/vid/index.html
+++ b/vid/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <dl8-video format="STEREO_180_LR" display-mode="force-inline" style="width:100%; height:100%" preferred-controls="MAGIC_WINDOW_CONTROLS" preload="true" fps="22" loop>
-            <source src="vid/test_clip_1280.mp4" type="video/mp4" />
+            <source src="test_clip_1280.mp4" type="video/mp4" />
         </dl8-video>
     </body>
 </html>
