fixed img source

--- a/img/index.html
+++ b/img/index.html
@@ -19,8 +19,6 @@
         </script>
     </head>
     <body>
-        <dl8-img format="STEREO_180_LR" display-mode="force-inline" style="width:100%; height:100%" preferred-controls="MAGIC_WINDOW_CONTROLS" preload="true">
-            <source src="test_img.png" type="video/mp4" />
-        </dl8-img>
+        <dl8-img src="test_img.png" format="STEREO_180_LR" display-mode="force-inline" style="width:100%; height:100%" preferred-controls="MAGIC_WINDOW_CONTROLS" preload="true"></dl8-img>
     </body>
 </html>
