--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <a href="/vid/index.html" style="padding-bottom:30px">Video Example</a>
+    <a href="/vid/index.html" style="padding-right:30px">Video Example</a>
     <a href="/img/index.html">Image Example</a>
 </body>
 </html>
