--- a/fisting-around/index.html
+++ b/fisting-around/index.html
@@ -1,3 +1,3 @@
 <html>
-<video src="luke_with_the_fist.mp4" autoplay muted loop style="width:100%;"></video>
+<video src="luke_with_the_fist.mp4" autoplay muted loop></video>
 </html>
